syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";
import "google/protobuf/Empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


 service SecurityLogin
{
	rpc GetSecurityLogin (SLIdRequest) returns (SecurityLoginReply);
	rpc GetSecurityLogins (google.protobuf.Empty) returns (SecurityLogins);
	rpc AddSecurityLogin (SecurityLogins) returns (google.protobuf.Empty);
	rpc UpdateSecurityLogin (SecurityLogins) returns (google.protobuf.Empty);
	rpc DeleteSecurityLogin (SecurityLogins) returns (google.protobuf.Empty);
}


message SLIdRequest
{
	string Id= 1;
}


message SecurityLoginReply
{
	  string Id = 1;
      string login = 2; 
     string Password = 3;
	 google.protobuf.Timestamp Created = 4;
	google.protobuf.Timestamp PasswordUpdate = 5;
	 google.protobuf.Timestamp AgreementAccepted = 6;
	 bool IsLocked= 7;
	 bool IsInactive = 8;
	 string EmailAddress = 9;
	 string PhoneNumber = 10;
	 string FullName = 11;
	 bool ForceChangePassword = 12;
	 string PreferredLanguage = 13;

      bytes TimeStamp = 14;
}

message SecurityLogins
{
	repeated SecurityLoginReply SecLogs = 1;
}